--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3602,7 +3602,7 @@ body.is-menu-visible #menu .inner {
 
 #banner {
 	padding: 20em 0 8.25em 0;
-	background-image: url("../../images/banner.webp");
+	background-image: url("../../images/banner.jpg");
 	background-size: cover;
 	background-position-y: -150px;
 	margin-bottom: -6.5em;
