--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2802,7 +2802,7 @@ ul.contact {
 
 ul.contact li {
 	text-decoration: none;
-	margin: 2.5em 0 0 0;
+	margin: 1em 0 0 0;
 	padding: 0 0 0 3.25em;
 	position: relative;
 }
@@ -4154,10 +4154,56 @@ body.is-preload #banner p {
 .wrapper.alt.style7:after {
 	box-shadow: inset 0 -1px 0 0 #2b2b2b, 0 1px 0 0 #2b2b2b;
 }
-.wrapper.alt.style8:before{
+
+.wrapper.spotlight.style8 {
+	background-color: #ffffff
+}
+
+.wrapper.spotlight.style8:before,
+.wrapper.spotlight.style8:after {
 	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%23ffffff' /%3E%3C/svg%3E");
 }
 
+.wrapper.spotlight.style8:before {
+	box-shadow: inset 0 -1px 0 0 #ffffff, 0 1px 0 0 #ffffff
+}
+
+.wrapper.spotlight.style8:after {
+	box-shadow: inset 0 -1px 0 0 #ffffff, 0 1px 0 0 #ffffff;
+}
+
+.wrapper.spotlight.style9 {
+	background-color: #e1e1e1;
+}
+
+.wrapper.spotlight.style9:before,
+.wrapper.spotlight.style9:after {
+	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%23e1e1e1' /%3E%3C/svg%3E");
+}
+
+.wrapper.spotlight.style9:before {
+	box-shadow: inset 0 -1px 0 0 #e1e1e1, 0 1px 0 0 #e1e1e1
+}
+
+.wrapper.spotlight.style9:after {
+	box-shadow: inset 0 -1px 0 0 #e1e1e1, 0 1px 0 0 #e1e1e1;
+}
+.wrapper.spotlight.style10 {
+	background-color: #2b2b2b;
+}
+
+.wrapper.spotlight.style10:before,
+.wrapper.spotlight.style10:after {
+	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%232b2b2b' /%3E%3C/svg%3E");
+}
+
+.wrapper.spotlight.style10:before {
+	box-shadow: inset 0 -1px 0 0 #2b2b2b, 0 1px 0 0 #2b2b2b
+}
+
+.wrapper.spotlight.style10:after {
+	box-shadow: inset 0 -1px 0 0 #2b2b2b, 0 1px 0 0 #2b2b2b;
+}
 @media screen and (max-width: 980px) {
 
 	.wrapper {
