--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3653,11 +3653,16 @@ body.is-menu-visible #menu .inner {
 	background-repeat: no-repeat;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1600px) {
+	#banner{
+		background-attachment: local;
+		background-position-y: top;
+	}
 	#banner2 {
 		background-image: url("../../images/wood.jpg");
-		background-position-x: 0px;
 		background-attachment: local;
+		background-position-x: 0px;
+		
 		padding: 12em 3em 12.375em 3em;
 		margin-bottom: -10em;
 		min-height: 300px;
@@ -3672,7 +3677,6 @@ body.is-menu-visible #menu .inner {
 
 @media screen and (max-width: 980px) {
 	#banner {
-		background-attachment: local;
 		padding: 12em 3em 12.375em 3em;
 		margin-bottom: -10em;
 		min-height: 300px;
@@ -4152,56 +4156,6 @@ body.is-preload #banner p {
 }
 
 .wrapper.alt.style7:after {
-	box-shadow: inset 0 -1px 0 0 #2b2b2b, 0 1px 0 0 #2b2b2b;
-}
-
-.wrapper.spotlight.style8 {
-	background-color: #ffffff
-}
-
-.wrapper.spotlight.style8:before,
-.wrapper.spotlight.style8:after {
-	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%23ffffff' /%3E%3C/svg%3E");
-}
-
-.wrapper.spotlight.style8:before {
-	box-shadow: inset 0 -1px 0 0 #ffffff, 0 1px 0 0 #ffffff
-}
-
-.wrapper.spotlight.style8:after {
-	box-shadow: inset 0 -1px 0 0 #ffffff, 0 1px 0 0 #ffffff;
-}
-
-.wrapper.spotlight.style9 {
-	background-color: #e1e1e1;
-}
-
-.wrapper.spotlight.style9:before,
-.wrapper.spotlight.style9:after {
-	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%23e1e1e1' /%3E%3C/svg%3E");
-}
-
-.wrapper.spotlight.style9:before {
-	box-shadow: inset 0 -1px 0 0 #e1e1e1, 0 1px 0 0 #e1e1e1
-}
-
-.wrapper.spotlight.style9:after {
-	box-shadow: inset 0 -1px 0 0 #e1e1e1, 0 1px 0 0 #e1e1e1;
-}
-.wrapper.spotlight.style10 {
-	background-color: #2b2b2b;
-}
-
-.wrapper.spotlight.style10:before,
-.wrapper.spotlight.style10:after {
-	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%232b2b2b' /%3E%3C/svg%3E");
-}
-
-.wrapper.spotlight.style10:before {
-	box-shadow: inset 0 -1px 0 0 #2b2b2b, 0 1px 0 0 #2b2b2b
-}
-
-.wrapper.spotlight.style10:after {
 	box-shadow: inset 0 -1px 0 0 #2b2b2b, 0 1px 0 0 #2b2b2b;
 }
 @media screen and (max-width: 980px) {
