--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4122,22 +4122,19 @@ body.is-preload #banner p {
 }
 
 .wrapper.spotlight.style6 {
-	background-color: #e1e1e1;
+	background-color: #d9dddf;
 }
 
-.wrapper.spotlight.style6:before{
-	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%23e1e1e1' /%3E%3C/svg%3E");
+.wrapper.spotlight.style6:before, .wrapper.spotlight.style6:after{
+	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%23d9dddf' /%3E%3C/svg%3E");
 }
 
-.wrapper.spotlight.style6:after {
-	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' fill='%23e1e1e1' /%3E%3C/svg%3E");
-}
 .wrapper.spotlight.style6:before {
-	box-shadow: inset 0 -1px 0 0 #e1e1e1, 0 1px 0 0 #e1e1e1;
+	box-shadow: inset 0 -1px 0 0 #d9dddf, 0 1px 0 0 #d9dddf;
 }
 
 .wrapper.spotlight.style6:after {
-	box-shadow: inset 0 -1px 0 0 #e1e1e1, 0 1px 0 0 #e1e1e1;
+	box-shadow: inset 0 -1px 0 0 #d9dddf, 0 1px 0 0 #d9dddf;
 }
 
 .wrapper.alt.style7 {
@@ -4347,15 +4344,15 @@ body.is-preload #banner p {
 	color: inherit;
 }
 
-@media screen and (max-width: 980px) {
-
+@media screen and (max-width: 1600px) {
 	#footer {
 		background-attachment: local;
 		background-position-x: center;
 		margin-top: -4.75em;
 		padding-top: 4.75em;
 	}
-
+}
+@media screen and (max-width: 980px) {
 	#footer .inner {
 		margin-top: -100px;
 		padding: 3em 3em 1em 3em;
