img icon updates

--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -30,9 +30,9 @@
 
 // Font.
 	$font: (
-		family:					('Source Sans Pro', Helvetica, sans-serif),
+		family:					('Source Sans Pro', Lato, sans-serif),
 		family-fixed:			('Courier New', monospace),
-		family-heading:			(Raleway, Helvetica, sans-serif),
+		family-heading:			(Raleway, Lato, sans-serif),
 		weight:					300,
 		weight-bold:			600,
 		weight-heading:			200,
