--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -165,10 +165,6 @@ textarea {
 	width: device-width;
 }
 
-body {
-	-ms-overflow-style: scrollbar;
-}
-
 @media screen and (max-width: 480px) {
 
 	html,
@@ -176,6 +172,11 @@ body {
 		min-width: 320px;
 	}
 
+}
+
+@font-face {
+	font-family: DomaineDisplay;
+	src: url(../webfonts/DomaineDisplay.ttf);
 }
 
 html {
@@ -218,7 +219,7 @@ input,
 select,
 textarea {
 	color: #ffffff;
-	font-family: Helvetica, 'Times New Roman', Times, serif;
+	font-family: Lato, 'Times New Roman', Times, serif;
 	font-size: 14pt;
 	font-weight: 300;
 	line-height: 1.65;
@@ -298,7 +299,7 @@ a.special:not(.button) {
 	text-decoration: none;
 	border-bottom: 0;
 	display: block;
-	font-family: Helvetica, 'Times New Roman', Times, serif;
+	font-family: Lato, 'Times New Roman', Times, serif;
 	font-size: 0.8em;
 	font-weight: 700;
 	letter-spacing: 0.1em;
@@ -368,7 +369,7 @@ h4,
 h5,
 h6 {
 	color: #f4f4f4; 
-	font-family: Georgia, 'Times New Roman', Times, serif;
+	font-family: DomaineDisplay, 'Times New Roman', Times, serif;
 	font-weight: 700;
 	letter-spacing: 0.1em;
 	margin: 0 0 1em 0;
@@ -2301,7 +2302,7 @@ form>.fields>.field.quarter {
 label {
 	color: #ffffff;
 	display: block;
-	font-family: Georgia, 'Times New Roman', Times, serif;
+	font-family: DomaineDisplay, 'Times New Roman', Times, serif;
 	font-size: 0.8em;
 	font-weight: 700;
 	letter-spacing: 0.1em;
@@ -3006,7 +3007,7 @@ button,
 	color: #ffffff !important;
 	cursor: pointer;
 	display: inline-block;
-	font-family: Helvetica, 'Times New Roman', Times, serif;
+	font-family: Lato, 'Times New Roman', Times, serif;
 	font-size: 0.8em;
 	font-weight: 700;
 	height: 3.75em;
@@ -3268,7 +3269,7 @@ button:disabled,
 }
 
 #header nav {
-	font-family: Helvetica, 'Times New Roman', Times, serif;
+	font-family: Lato, 'Times New Roman', Times, serif;
 	font-size: 0.8em;
 	font-weight: 700;
 	height: 3em;
@@ -3492,7 +3493,7 @@ button:disabled,
 	border-radius: 5px;
 	border: 0;
 	display: block;
-	font-family: Helvetica, 'Times New Roman', Times, serif;
+	font-family: Lato, 'Times New Roman', Times, serif;
 	font-size: 0.8em;
 	font-weight: 200;
 	letter-spacing: 0.1em;
@@ -3615,7 +3616,7 @@ body.is-menu-visible #menu .inner {
 	-ms-filter: blur(0);
 	filter: blur(0);
 	opacity: 1;
-	font-family: Helvetica, 'Times New Roman', Times, serif;
+	font-family: Lato, 'Times New Roman', Times, serif;
 	font-size: 1em;
 	font-weight: 200;
 	letter-spacing: 0.1em;
@@ -3644,6 +3645,20 @@ body.is-menu-visible #menu .inner {
 	background-size: cover;
 	background-position-y: -150px;
 	background-position-x: -100px;
+	margin-bottom: -10em;
+	/* Set a specific height */
+	min-height: 400px;
+
+	/* Create the parallax scrolling effect */
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+}
+
+#banner3 {
+	padding: 20em 0 8.25em 0;
+	background-image: url("../../images/shrews-sink.png");
+	background-size: cover;
+	background-position-y: -250px;
 	margin-bottom: -10em;
 	/* Set a specific height */
 	min-height: 400px;
